move checks and update comments